--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "proxy": "https://restaurant-backend-ccq4.onrender.com",
   "dependencies": {
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
